Dockerfile and doc

--- a/Iteration_5/Dockerfile
+++ b/Iteration_5/Dockerfile
@@ -1,4 +1,5 @@
-# docker build -t gbernat/port-scanner:1.0.0 -t gbernat/port-scanner:latest .
+# docker build -t gbernat/port-scanner .
+# docker run -it gbernat/port-scanner www.target.com -t 10
 
 # Base image for python
 FROM python:3.7
@@ -7,12 +8,8 @@ RUN useradd --create-home appuser
 WORKDIR /home/appuser
 USER appuser
 
-# install the base package
-COPY . .
+# Copy the code to image
+COPY src .
 
-
-# uncomment to expose port only if a custom threat feed
-#EXPOSE 9000
-## ---- end section for changes ----
-
-CMD [ "python", "./port-scanner.py", "www.google.com",  "-t",  "20"]
+# What to execute when docker run
+ENTRYPOINT [ "python", "port-scanner.py"]
